@startuml

title US147 \n As an Administrator, I want to attach a room to a house grid, so that the room’s power and energy consumption is included in that grid.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
  FontSize 12
}


class EnergyGridSettingsWebController
class EnergyGridRepository
class EnergyGrid
class RoomMapper
class EnergyGridCrudeRepo

EnergyGridSettingsWebController -- EnergyGridRepository : >
EnergyGridRepository -- EnergyGrid : >
EnergyGridRepository -- RoomMapper : >
EnergyGridRepository -- EnergyGridCrudeRepo : >



class EnergyGridSettingsWebController {
attachRoomToGrid(@RequestBody RoomDTO roomDTO, @PathVariable("energyGridId") String gridId)
}

class EnergyGridRepository{
attachRoomToGrid(roomDTO, gridName)
}

class RoomMapper{
dtoToObject(roomDTO)
}


class EnergyGrid {
getById(gridName)
addRoom(room)
}

class EnergyGridCrudeRepo{
save(energyGrid)
findById(id)
}

@enduml